--- a/mstyle.css
+++ b/mstyle.css
@@ -299,3 +299,18 @@ body.dark-mode {
   .marker{
     text-align: center;
   } 
+  .video-container {
+  position: relative;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 aspect ratio */
+  overflow: hidden;
+}
+
+.video-container video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
